            Fix out of bounds jsvGetAddressOf in jsvNewFlatStringOfLength (wasn't a cause of instability)
            Storage: Now put all .js files into internal storage (if 2 storage areas). Fix corruption issue when reading using file with explicit drive letter 
            Bangle.js: default 'locale' now supports second 'dp' argument for decimal places in distance/speed/temp

     2v12 : nRF52840: Flow control XOFF is now sent at only 3/8th full - delays in BLE mean we can sometimes fill our 1k input buffer otherwise
            __FILE__ is now set correctly for apps (fixes 2v11 regression)
            Bangle.js: Ensure Bangle.getHealthStatus("day") resets at midnight (fix https://github.com/espruino/BangleApps/issues/1216)
            Bangle.js: Attempt to fix Bangle.buzz that occasionally doesn't stop
            Bangle.js2: Lower bootloader LCD SPI bitrate (was out of spec, not all LCDs worked with it)
            Bangle.js: Attempt to fix occasional issue where vibration gets stuck on (fix https://github.com/espruino/BangleApps/issues/1249)
            Bangle.js: Ensure Bangle.setLCDPower only fires lcdPower event if state has changed (fix https://github.com/espruino/BangleApps/issues/1138)
            Bangle.js2: Holding BTN at boot skips bootloader storage check, bootloader now times out if too many files
            Bangle.js: Move position of filesystem checks to before first code is run
            Storage.write is now explicit about not allowing zero length files, also creates exception if it fails because it can't get a data pointer
            Bangle.js2: Only handle UBX protocol from GPS on Bangle.js 1 as it interferes with CASIC on Bangle.js 2 (fix #2124)
            Bangle.js: GPS-raw no longer sets the FIFO_FULL message if data is lost - just passes a bool as the second argument
            Fix for buffer overflow + segv found via fuzzing (#2121, #2122)